# terminusgps-authenticator

./: '  .gitignore  README.md  ]  generate_default_pfps.py  package.json  pyproject.toml  reportlab_test.py  requirements.txt
docs/source/: commands.rst  conf.py  index.rst  models.rst  pdf_files.rst  settings.rst
src/: asgi.py  settings.py  urls.py  wsgi.py
src/settings/: dev.py  prod.py
src/static/src/css/: input.css  output.css
terminusgps_authenticator/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  validators.py
terminusgps_authenticator/management/commands/: setfingerprint.py  tailwind.py
terminusgps_authenticator/migrations/: 0001_initial.py  0002_alter_authenticatoremployee_punched_in_and_more.py  0002_authenticatoremployee_pfp_and_more.py  0003_alter_authenticatorlogitem_action.py  0003_remove_authenticatoremployee__punched_in_and_more.py  0004_alter_authenticatorlogitem_action.py  0004_authenticatoremployee__prev_fingerprint_code_and_more.py  0005_alter_authenticatorlogitem_options_and_more.py  0005_authenticatorlogreport.py  0006_rename_items_authenticatorlogreport_logs_and_more.py  0007_authenticatoremployeeshift_tdelta.py  0008_alter_authenticatoremployeeshift_options_and_more.py  0009_alter_authenticatoremployee__prev_punch_state.py
terminusgps_authenticator/pdfs/: __init__.py  docs.py  pages.py
terminusgps_authenticator/templates/: layout.html
terminusgps_authenticator/templates/employees/: create_batch.html  delete.html  update.html
terminusgps_authenticator/templates/employees/partials/: _create_batch.html  _detail.html  _list.html
terminusgps_authenticator/templates/terminusgps_authenticator/: about.html  contact.html  dashboard.html  footer.html  landing.html  layout.html  login.html  logout.html  navbar.html  paginator.html  privacy.html  settings.html
terminusgps_authenticator/templates/terminusgps_authenticator/charts/: pie.html
terminusgps_authenticator/templatetags/: authenticator_charts.py  authenticator_employees.py
terminusgps_authenticator/views/: __init__.py  auth.py  base.py  employees.py  generic.py  logs.py  mixins.py  reports.py  shifts.py
terminusgps_timekeeper/: admin.py  apps.py  emailers.py  forms.py  models.py  pdf_generators.py  pdfs.py  signals.py  urls.py  utils.py  validators.py
terminusgps_timekeeper/management/commands/: tailwind.py
terminusgps_timekeeper/templates/terminusgps_timekeeper/: contact.html  footer.html  layout.html  login.html  logout.html  navbar.html  paginator.html  privacy.html  settings.html
terminusgps_timekeeper/views/: __init__.py  auth.py  employees.py  generic.py  mixins.py  reports.py  shifts.py
(+80 files in other folders)
