[project]
name = "terminusgps-authenticator"
version = "1.0.0"
description = "Authenticator app for Terminus GPS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-encrypted-model-fields>=0.6.5",
    "django>=5.1.6",
    "pandas>=2.2.3",
]

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "node_modules",
    "site-packages",
    "dist",
    "build",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "DJ",
]
ignore = ["DJ001", "F821"]
fixable = [ "ALL" ]
unfixable = []
extend-per-file-ignores = {"*/migrations/*.py" = ["E501"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "autoclasstoc>=1.7.0",
    "django-docs>=0.3.3",
    "sphinx>=8.2.1",
    "sphinxawesome-theme>=5.3.2",
]
